--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .nav-bar-ipad-1 {
   display: none;
-  background-color: black;;
+  background-color: black;
 }
 
 .nav-bar-ipad-2 {
@@ -44,7 +44,6 @@
 .top-articles article {
   background-color: chocolate;
   border: crimson solid 1px;
-  height: 33.3vh;
   margin: 10px 5px;
 }
 
@@ -52,13 +51,50 @@
   background-color: darkgreen;
 }
 
-.latest-funding div {
-  background-color: darkkhaki;
+.fund-banner {
+  background-color: burlywood;
+}
+
+.footer-links {
+  height: 185px;
+}
+
+.footer-links-ln1 {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-links-ln2 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.footer-links li {
+  list-style-type: none;
+}
+
+.footer-legal {
+  height: 122px;
+  text-align: center;
+}
+
+.footer-legal span {
+  display: block;
 }
 
 @media (min-width: 768px) {
   body {
     background-color: lightgreen;
+  }
+
+  .nav {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .nav-links-ipad-wrapper {
+    flex: 1;
   }
 
   .nav-icons {
@@ -94,10 +130,51 @@
     background-color: cornflowerblue;
   }
 
+  .latest-news {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+    grid-gap: 10px;
+  }
+
+  .ln-heading {
+    grid-column: 1 / -1;
+  }
+
+  .fund-banner-container {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .fund-banner {
+    margin: 10px;
+    flex: 1;
+  }
+
+  .sections-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
+  }
+
+  .latest-deals-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+  }
+
+  .footer-legal span {
+    display: inline;
+  }
+
 }
 
 @media (min-width: 1024px) {
   body {
-    background-color: blue;
+    background-color: rgb(166, 166, 253);
+  }
+
+  .nav-logo {
+    display: none;
   }
 }
