--- a/css/style.css
+++ b/css/style.css
@@ -262,14 +262,21 @@
   display: block;
 }
 
+.sections-grid ul {
+  display: linear;
+}
+
 .sg-img1 {
-  background-image: url('/images/app-store-apple-hed-796x412.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/app-store-apple-hed-796x412.png');
   width: 100%;
   height: 276px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  padding-top: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  /* padding-top: 200px; */
 }
 
 .sg-img1 a {
