--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@
 
 .top-articles {
   margin-top: 58px;
-  /* z-index: -1; */
 }
 
 .top1 {
@@ -314,6 +313,8 @@
 .sections-grid h3 {
   font-size: 20px;
   font-family: Maquette, sans-serif;
+  margin: 20px 0;
+  color: #f42;
 }
 
 .sections-grid {
@@ -381,9 +382,35 @@
   width: 65%;
 }
 
+.bckg-image h5 {
+  font-size: 14px;
+  color: #fff;
+}
+
+.bckg-image ul {
+  list-style-type: none;
+  color: #fff;
+  margin: 0 10px;
+}
+
+.bckg-image h3,
+.bckg-image h5 {
+  margin: 0 10px;
+}
+
+.bckg-image li {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
 .sub-article {
   display: flex;
   color: #f42;
+  margin: 2px 0;
+}
+
+.sub-article h3 {
+  margin: -2px 0;
 }
 
 .footer-links {
@@ -395,7 +422,6 @@
   display: flex;
   justify-content: center;
   padding: 30px 0 10px 0;
-  
 }
 
 .footer-links-ln2 {
