--- a/css/style.css
+++ b/css/style.css
@@ -101,14 +101,33 @@
   margin: 10px 5px;
   color: #f8f8f8;
   height: 33vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 
 .top-articles {
   margin-top: 58px;
 }
 
+.ta-atcl-credits {
+  display: flex;
+  justify-content: start;
+}
+
+.top-articles .material-icons {
+  font-size: 14px;
+  /* align-self: baseline; */
+}
+
+.ta-atcl-credits p {
+  margin-right: 10px;
+  font-size: 12px;
+  color: #a7a7a7;
+}
+
 .top1 {
-  background-image: url('/images/latest-games.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('/images/latest-games.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   padding: 10px;
@@ -116,7 +135,7 @@
 }
 
 .top2 {
-  background-image: url('/images/amazon.PNG');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('/images/amazon.PNG');
   background-size: cover;
   background-repeat: no-repeat;
   padding: 10px;
@@ -124,7 +143,7 @@
 }
 
 .top3 {
-  background: url('/images/corona.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('/images/corona.png');
   background-size: cover;
   background-repeat: no-repeat;
   padding: 10px;
@@ -450,7 +469,6 @@
   height: 122px;
   text-align: center;
   font-size: 13px;
-  font-family: 'ARS Maquette', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
