--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 48px;
+  /* height: 48px; */
   background-color: #f6f6f6;
 }
 
@@ -97,12 +97,12 @@
 .top-articles article {
   margin: 10px 5px;
   color: #f8f8f8;
-  height: 33vh;
+  /* height: 33vh; */
   font-size: 14px;
   letter-spacing: -0.08em;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .ta-atcl-credits {
@@ -129,7 +129,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding: 10px;
-  height: 33vh;
+  /* height: 33vh; */
 }
 
 .top2 {
@@ -137,7 +137,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding: 10px;
-  height: 33vh;
+  /* height: 33vh; */
 }
 
 .top3 {
@@ -145,7 +145,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding: 10px;
-  height: 33vh;
+  /* height: 33vh; */
 }
 
 .ln-heading {
@@ -526,6 +526,14 @@
     flex: 1;
   }
 
+  .nav-logo a {
+    height: 80px;
+  }
+
+  .tech-fest-cta {
+    padding-left: 120px;
+  }
+
   .nav-icons {
     display: none;
   }
@@ -534,12 +542,14 @@
     display: block;
     color: rgba(255, 255, 255, 0.6);
     font-size: 13px;
-    height: 40px;
-    padding-top: 16px;
+    height: 32px;
+    padding-top: 8px;
   }
 
   .nav-bar-ipad-2 {
     display: block;
+    height: 48px;
+    padding-top: 12px;
   }
 
   .top-articles {
@@ -550,13 +560,11 @@
 
   .top1 {
     grid-column: 1/3;
-    grid-row: 1/3;
-    background-color: burlywood;
+    grid-row: span 2;
   }
 
   .top2 {
     grid-column: span 1;
-    background-color: chocolate;
   }
 
   .top3 {
@@ -610,7 +618,7 @@
     background-color: rgb(166, 166, 253);
   }
 
-  .nav-logo {
+  .nav-logo a {
     display: none;
   }
 
