--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,10 @@
   margin: auto 0;
 }
 
+.footer-legal p {
+  display: block;
+}
+
 .sub-article div p {
   font-size: 14px;
 }
@@ -436,7 +440,6 @@
   display: flex;
   color: #f42;
   margin: 2px 0;
-  /* width: 100%; */
 }
 
 .sub-article h3 {
@@ -494,10 +497,6 @@
   height: 9px;
 }
 
-.footer-legal p {
-  display: block;
-}
-
 .powered-by-logo {
   height: 9px;
 }
@@ -531,6 +530,10 @@
 }
 
 @media (min-width: 768px) {
+  .nav-bar-ipad-1 .right-lp-dsktp {
+    display: none;
+  }
+
   .nav {
     display: flex;
     justify-content: flex-start;
@@ -560,10 +563,15 @@
     padding-top: 8px;
   }
 
+  .nav-bar-ipad-2 li {
+    margin-left: 30px;
+  }
+
   .nav-bar-ipad-2 {
-    display: block;
+    display: flex;
     height: 48px;
     padding-top: 12px;
+    justify-content: space-around;
   }
 
   .top-articles {
@@ -642,7 +650,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: repeat(4, 1fr);
-    margin-bottom: 45px;
+    margin-bottom: 45;
   }
 
   .latest-deals h2 {
@@ -662,12 +670,41 @@
 }
 
 @media (min-width: 1024px) {
-  body {
-    background-color: rgb(166, 166, 253);
-  }
-
   .nav-logo a {
     display: none;
+  }
+
+  .nav-bar-ipad-1 ul {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .nav-bar-ipad-1 li {
+    margin-left: 10px;
+  }
+
+  .nav-bar-ipad-1 .right-lp-dsktp {
+    display: flex;
+  }
+
+  .nav-bar-ipad-2 ul {
+    justify-content: flex-start;
+  }
+
+  .nav-bar-ipad-2 li {
+    margin-left: 10px;
+  }
+
+  .nav-bar-ipad-2 {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav-bar-ipad-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
   }
 
   .latest-news {
@@ -683,6 +720,11 @@
     display: inline-block;
     margin-left: 5px;
   }
+
+/* .nav-bar-ipad-2 .material-icons {
+  border-left: #f42 solid 1px;
+  height: 100%
+} */
 
   .fourth-banner {
     display: block;
