--- a/css/style.css
+++ b/css/style.css
@@ -353,13 +353,18 @@
 }
 
 .sections-grid {
-  margin: 15px;
+  margin: 15px 0;
+}
+
+.sg-article-list {
+  width: 90%;
+  margin: 0 auto;
 }
 
 .sg-article-list li {
   border-bottom: rgb(223, 221, 221) 1px solid;
   color: #555;
-  padding-bottom: 10px;
+  padding: 10px 0;
   list-style-position: outside;
   font-size: 13px;
 }
@@ -370,7 +375,7 @@
 
 .sg-article-list ul li::before {
   content: "\2022";
-  color: red;
+  color: #f42;
   font-weight: bold;
   display: inline-block;
   width: 1em;
@@ -551,6 +556,10 @@
 
 .line-through {
   text-decoration: line-through;
+}
+
+.heart {
+  color: red;
 }
 
 @media (min-width: 768px) {
